feedback.txt
Your test suite did not compile!

tests/tests.cc:50:48: error: invalid digit '9' in octal constant
   50 |   REQUIRE_THROWS_AS(atm.DepositCash(87654321, 0987, 20), std::invalid_argument);
      |                                                ^
tests/tests.cc:62:49: error: invalid digit '9' in octal constant
   62 |   REQUIRE_THROWS_AS(atm.WithdrawCash(87654321, 0987, 20),
      |                                                 ^
2 errors generated.


score: 0/5
